update dto object to record object