@@ -1,75 +1,58 @@
 package cs489.miu.edu.hotel_reservation_service.service.impl;
 
-import cs489.miu.edu.hotel_reservation_service.Util.ImageHandler;
-import cs489.miu.edu.hotel_reservation_service.entity.FileData;
+import cs489.miu.edu.hotel_reservation_service.entity.dto.room.RoomValueMapper;
+import cs489.miu.edu.hotel_reservation_service.entity.dto.roomDetail.RoomDetailRequest;
+import cs489.miu.edu.hotel_reservation_service.entity.dto.roomDetail.RoomDetailResponse;
+import cs489.miu.edu.hotel_reservation_service.entity.dto.roomDetail.RoomDetailValueMapper;
 import cs489.miu.edu.hotel_reservation_service.entity.RoomDetail;
-import cs489.miu.edu.hotel_reservation_service.entity.dto.FileDataRequestDTO;
-import cs489.miu.edu.hotel_reservation_service.entity.dto.RoomDetailRequestDTO;
-import cs489.miu.edu.hotel_reservation_service.entity.dto.RoomDetailResponseDTO;
-import cs489.miu.edu.hotel_reservation_service.entity.mapper.FileDataValueMapper;
-import cs489.miu.edu.hotel_reservation_service.entity.mapper.RoomDetailValueMapper;
-import cs489.miu.edu.hotel_reservation_service.exception.FileDataNotFoundException;
 import cs489.miu.edu.hotel_reservation_service.exception.RoomDetailNotFoundException;
 import cs489.miu.edu.hotel_reservation_service.exception.RoomDetailServiceException;
 import cs489.miu.edu.hotel_reservation_service.repository.IRoomDetailRepository;
 import cs489.miu.edu.hotel_reservation_service.service.IRoomDetailService;
-import org.springframework.beans.factory.annotation.Autowired;
+import cs489.miu.edu.hotel_reservation_service.util.ImageHandler;
 import org.springframework.stereotype.Service;
-import org.springframework.web.multipart.MultipartFile;
+
 
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class RoomDetailService implements IRoomDetailService {
 
     private IRoomDetailRepository roomDetailRepository;
 
-    private ImageHandler imageHandler;
-
-
     @Override
-    public RoomDetailResponseDTO createRoomDetail(RoomDetailRequestDTO roomDetailRequestDTO) {
+    public RoomDetailResponse createRoomDetail(RoomDetailRequest roomDetailRequest) {
         try {
-            RoomDetail roomDetail = RoomDetailValueMapper.convertToEntity(roomDetailRequestDTO);
-            if(roomDetailRequestDTO.getImages() != null && !roomDetailRequestDTO.getImages().isEmpty()) {
-                List<MultipartFile> images = roomDetailRequestDTO.getImages();
-                images.forEach(image -> {
-                    FileDataRequestDTO imageRequestDTO = imageHandler.uploadImage(image);
-                    FileData newImage = FileDataValueMapper.convertToEntity(imageRequestDTO);
-                    roomDetail.getImages().add(newImage);
-                });
-            }
-            RoomDetail roomDetailSaved = roomDetailRepository.save(roomDetail);
-            return RoomDetailValueMapper.convertToDTO(roomDetailSaved);
+            RoomDetail roomDetail = RoomDetailValueMapper.convertToEntity(roomDetailRequest);
+            return RoomDetailValueMapper.convertToDto(roomDetailRepository.save(roomDetail));
         } catch (Exception e) {
             throw new RoomDetailServiceException("Exception occurred while create a new room detail");
         }
     }
 
     @Override
-    public RoomDetailResponseDTO updateRoomDetail(Integer roomId, RoomDetailRequestDTO roomDetailRequestDTO) {
+    public RoomDetailResponse updateRoomDetail(Integer roomId, RoomDetailRequest roomDetailRequest) {
         try {
             RoomDetail roomDetail = roomDetailRepository.findById(roomId)
                     .orElseThrow(() -> new RoomDetailNotFoundException("Room detail not found with id " + roomId));
-            roomDetail.setType(roomDetailRequestDTO.getType());
-            roomDetail.setPrice(roomDetailRequestDTO.getPrice());
-            roomDetail.setBedType(roomDetailRequestDTO.getBedType());
-            roomDetail.setNumberOfBeds(roomDetailRequestDTO.getNumberOfBeds());
-            roomDetail.setDescription(roomDetailRequestDTO.getDescription());
-            return RoomDetailValueMapper.convertToDTO(roomDetailRepository.save(roomDetail));
+            roomDetail.setType(roomDetailRequest.type());
+            roomDetail.setPrice(roomDetailRequest.price());
+            roomDetail.setBedType(roomDetailRequest.bedType());
+            roomDetail.setNumberOfBeds(roomDetailRequest.numberOfBeds());
+            roomDetail.setDescription(roomDetailRequest.description());
+            roomDetail.setRooms(roomDetailRequest.rooms().stream().map(RoomValueMapper::convertToEntity).toList());
+            return RoomDetailValueMapper.convertToDto(roomDetailRepository.save(roomDetail));
         } catch (Exception e) {
             throw new RoomDetailServiceException("Exception occurred while update room detail id " + roomId);
         }
     }
 
     @Override
-    public void deleteRoomDetail(Integer roomId) {
+    public void deleteRoomDetailById(Integer roomId) {
         try {
             RoomDetail roomDetail = roomDetailRepository.findById(roomId)
                     .orElseThrow(() -> new RoomDetailNotFoundException("Room detail not found with id " + roomId));
-            roomDetail.getImages().forEach(image -> imageHandler.deleteImage(image.getPath()));
+            roomDetail.getImages().forEach(image -> ImageHandler.deleteImage(image.getPath()));
             roomDetailRepository.delete(roomDetail);
         } catch (Exception e) {
             throw new RoomDetailServiceException("Exception occurred while delete room detail id " + roomId);
@@ -77,62 +60,24 @@ public class RoomDetailService implements IRoomDetailService {
     }
 
     @Override
-    public RoomDetailResponseDTO getRoomDetailById(Integer roomId) {
+    public RoomDetailResponse getRoomDetailById(Integer roomId) {
         try {
             RoomDetail roomDetail = roomDetailRepository.findById(roomId)
                     .orElseThrow(() -> new RoomDetailNotFoundException("Room detail not found with id " + roomId));
-            return RoomDetailValueMapper.convertToDTO(roomDetail);
+            return RoomDetailValueMapper.convertToDto(roomDetail);
         } catch (Exception e) {
             throw new RoomDetailServiceException("Exception occurred while get room detail id " + roomId);
         }
     }
 
     @Override
-    public List<RoomDetailResponseDTO> getAllRoomDetails() {
+    public List<RoomDetailResponse> getAllRoomDetails() {
         try {
-            return roomDetailRepository.findAll().stream().map(RoomDetailValueMapper::convertToDTO).collect(Collectors.toList());
+            return roomDetailRepository.findAll().stream().map(RoomDetailValueMapper::convertToDto).toList();
         } catch (Exception e) {
             throw new RoomDetailServiceException("Exception occurred while get all room detail");
         }
     }
 
-    @Override
-    public RoomDetailResponseDTO addImages(Integer roomId, List<MultipartFile> images) {
-        try {
-            RoomDetail roomDetail = roomDetailRepository.findById(roomId)
-                    .orElseThrow(() -> new RoomDetailNotFoundException("Room detail not found with id " + roomId));
-            images.forEach(image -> {
-                FileDataRequestDTO imageRequestDTO = imageHandler.uploadImage(image);
-                FileData newImage = FileDataValueMapper.convertToEntity(imageRequestDTO);
-                roomDetail.getImages().add(newImage);
-            });
-            return RoomDetailValueMapper.convertToDTO(roomDetailRepository.save(roomDetail));
-        } catch (Exception e) {
-            throw new RoomDetailServiceException("Exception occurred while add image to room detail id " + roomId);
-        }
-    }
 
-    @Override
-    public RoomDetailResponseDTO updateImages(Integer roomId, Integer imageId, MultipartFile imageFile) {
-        try {
-            RoomDetail roomDetail = roomDetailRepository.findById(roomId)
-                    .orElseThrow(() -> new RoomDetailNotFoundException("Room detail not found with id " + roomId));
-            Optional<FileData> optionalCurImage = roomDetail.getImages().stream().filter(image -> image.getId().equals(imageId)).findFirst();
-            if (optionalCurImage.isPresent()) {
-                FileDataRequestDTO imageRequestDTO = imageHandler.uploadImage(imageFile);
-                FileData newImage = FileDataValueMapper.convertToEntity(imageRequestDTO);
-                FileData curImage = optionalCurImage.get();
-                imageHandler.deleteImage(curImage.getPath());
-                curImage.setPath(newImage.getPath());
-                curImage.setName(newImage.getName());
-                curImage.setType(newImage.getType());
-            } else {
-                throw new FileDataNotFoundException("Image not found with id " + imageId);
-            }
-            roomDetailRepository.save(roomDetail);
-            return RoomDetailValueMapper.convertToDTO(roomDetail);
-        } catch (Exception e) {
-            throw new RoomDetailServiceException("Exception occurred while update image id "+ imageId +" to room detail id " + roomId);
-        }
-    }
 }
